--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+html {
+	height: 100%;
+	font-family: "IMB Plex Sans KR" !important;
+}
 body {
   margin: 0;
+  height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +15,99 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video, button {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+button {
+  background: none;
+  cursor: pointer;
+}
+@font-face {
+	font-family: "IMB Plex Sans KR";
+	font-weight: 400;
+	src: url("./assets/fonts/NanumGothic-Regular.ttf") format("truetype");
+}
+@font-face {
+	font-family: "IMB Plex Sans KR";
+	font-weight: 700;
+	src: url("./assets/fonts/NanumGothic-Bold.ttf") format("truetype");
+}
+#root {
+	display: flex;
+	height: 100%;
+	flex-direction: column;
+	flex: 1;
+}
+.Wrap {
+	height: 100%;
+	background-color: #cef1ff;
+}
+
+/* scroll-picker */
+.scroll-select-container {
+	margin: auto;
+	width: 300px;
+}
+.selected-time {
+	font-size: 30px !important;	
+}
+
+/* swiper */
+.swiper-container {
+	overflow: visible !important;
+}
+.swiper-button-prev {
+	color: #333 !important;
+	left: 50% !important;
+	right: 100px !important;
+	top: 120% !important;
+	transform: translateX(-70px);
+}
+.swiper-button-next {
+	color: #333 !important;
+	right: 50% !important;
+	top: 120% !important;
+	transform: translateX(70px);
 }
