--- a/src/components/upload/upload.scss
+++ b/src/components/upload/upload.scss
@@ -1,3 +1,5 @@
+@import '../../config/variables.scss';
+
 .Upload {
     display: flex;
     flex: 1;
@@ -28,6 +30,7 @@
 
                 &-File {
                     flex: 1;
+                    @include DF();
                     border: 2px solid black;
                     border-radius: 10px;
                 }
