업로드 파일 드래그 앤 드롭

--- a/src/config/_mixin.scss
+++ b/src/config/_mixin.scss
@@ -3,3 +3,9 @@
     justify-content: center;
     align-items: center;
 }
+
+@mixin filledStyle {
+    color: white;
+    border-radius: 10px;
+    background-color: #efefef;
+}
