--- a/src/components/upload/upload.scss
+++ b/src/components/upload/upload.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex: 1;
     justify-content: center;
-    border: 1px solid red;
+    background-color: hsl(187, 82%, 96%);
 }
     .inner {
         display: flex;
@@ -12,7 +12,7 @@
         padding: 7%;
         max-width: 1100px;
         flex-direction: column;
-        border: 1px solid blue;
+        background-color: #fff;
     }
         .TitleArea {
         }
@@ -27,25 +27,75 @@
             .UploadInput {
                 flex: 1;
                 display: flex;
+                position: relative;
+
+                #UploadFile {
+                    display: none;
+                }
 
                 &-File {
                     flex: 1;
                     @include DF();
-                    border: 2px solid black;
+                    border: 2px solid #aaa;
                     border-radius: 10px;
+                    color: #aaa;
+
+                    cursor: pointer;
+                    transition: 0.12s ease-in;
+
+                    &-Dragging {
+                        flex: 1;
+                        @include DF();
+                        @include filledStyle();
+                    }
                 }
+
+                .DragDrop-Files {
+                    flex: 1;
+                    @include DF();
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    cursor: pointer;
+                }
+                    .FileItem {
+                        @include DF();
+                        width: 100%;
+                        height: 100%;
+
+                        &:hover .FileItemName {
+                            color: red;
+                        }
+                    }
+                        .FileItemName {
+                            font-weight: bold;
+                        }
             }
             .SubmitArea {
                 flex: 1;
-                display: flex;
+                @include DF();
+                flex-direction: column;
             }
                 #SubmitInput {
-
+                    padding: 10px;
+                    border-radius: 4px;
+                    border: 2px solid #aaa;
                 }
-                    #UploadFile {
-                        display: none;
-                    }
                 .SubmitBtn {
+                    margin-top: 20%;
+                    padding: 3% 0;
+                    width: 60%;
+                    color: white;
+                    border-radius: 4px;
+                    font-weight: bold;
+                    letter-spacing: 5px;
+                    border: 1px solid #ffa823;
+                    background-color: #ffba51;
 
+                    &:hover {
+                        color: black;
+                    }
                 }
                 
